--- a/app/views/hangouts/index.html.erb
+++ b/app/views/hangouts/index.html.erb
@@ -2,7 +2,19 @@
   <div id="message-display">
   </div>
   <div id="message-form">
-    <form action="" id="message-form">
+    <%= form_with model: @message, local: false do |f| %>
+      <div class="field has-addons">
+        <div class="control">
+          <%= f.text_field :body, id: 'message-input', class: 'input' %>
+        </div>
+        <div class="control">
+          <%= f.submit 'Send Message', class: 'button is-primary' %>
+        </div>
+      </div>
+    <% end %>
+
+    <%# HTML form for when not using message model %>
+    <%# <form action="" id="message-form">
       <div class="field has-addons">
         <div class="control">
           <input class="input" id="message-input" type="text">
@@ -11,6 +23,6 @@
           <input type="submit" value="Send Message" class="button is-primary">
         </div>
       </div>
-    </form>
+    </form> %>
   </div>
 </div>
