--- a/app/views/hangouts/index.html.erb
+++ b/app/views/hangouts/index.html.erb
@@ -2,11 +2,11 @@
   <div id="message-display">
     <% @messages.each do |message| %>
       <article class="message">
-        <div class="message-header">
-          <%= message.user.email %>
-        </div>
         <div class="message-body">
-          <%= message.body %>
+          <p>
+            <strong><%= message.user.email %>: </strong>
+            <%= message.body %>
+          </p>
         </div>
       </article>
     <% end %>
